--- a/stuff-to-learn-in-python.ipynb
+++ b/stuff-to-learn-in-python.ipynb
@@ -262,6 +262,33 @@
     "- Filesystem paths with `pathlib`\n",
     "- Type hints and static typing (`typing`, `mypy`)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ad0fab6a-da38-4df8-8171-2e87df78fffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "satvik\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"satvik\"\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81610dc1-7d51-45f0-b149-2733401bd9a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
